lib/stratiform/res/test/stratiform/corpus/pos/pragma-schema-url-with-fragment.tel
tel 1.0 https://example.com/schema#deadbeefcafebabe0123456789abcdef0123456789abcdeffeedfacecafebabe
hello
