lib/stratiform/res/test/stratiform/corpus/neg/e310-schema-invalid-name.tel
tel 1.0 https://tel-lang.org/schema/tel-schema

name UPPERCASE-NAME

document
  field foo string
